# GSW-C-meson

./: Makefile  README  TOOLS.gcc  meson.build  meson.options
.github/workflows/: tests-meson.yml
